--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-compound-timer": "^1.2.0",
+    "react-countdown-circle-timer": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "use-sound": "^2.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
